--- a/src/components/FrontPage/style.scss
+++ b/src/components/FrontPage/style.scss
@@ -1,2 +1,9 @@
+$bg: #BADDD9;
+$bg: #BADDD9;
+$text: #F8F9FA;
+$nav-text: #7FB8B3;
+
 .front-page {
+    height: 100%;
+    //background-color: $bg;
 }
