--- a/src/components/FrontPage/PageContent/style.css
+++ b/src/components/FrontPage/PageContent/style.css
@@ -9,9 +9,9 @@
 
 @media (min-width: 768px) {
   .content {
-    top: 120px;
+    top: 85px;
     height: 525px;
-    position: static; } }
+    position: relative; } }
 
 .content .mobile-space {
   width: 100%;
@@ -67,7 +67,7 @@
   font-weight: 200; }
 
 .content .contain .btn-main {
-  margin: 30px;
+  margin: 30px 30px 50px;
   border-radius: 6px;
   background-color: #F8F9FA;
   color: #6DABA4;
@@ -90,3 +90,141 @@
   .content .contain .window-1 {
     max-width: 1100px;
     content: url("Window-1@2x.png"); } }
+
+.content .contain .divider {
+  height: 110px; }
+
+.content .contain .space {
+  height: auto;
+  width: 100%;
+  margin: auto; }
+
+@media (min-width: 768px) {
+  .content .contain .space {
+    text-align: center;
+    width: 100%; } }
+
+@media (min-width: 980px) {
+  .content .contain .space {
+    max-width: 1300px; } }
+
+.content .contain .space .row {
+  height: auto;
+  width: auto;
+  color: black;
+  text-align: center; }
+
+.content .contain .space .row .page-info {
+  margin-bottom: 60px;
+  padding: 0;
+  height: 100%; }
+
+@media (min-width: 768px) {
+  .content .contain .space .row .page-info {
+    display: inline-block;
+    width: 50%; } }
+
+.content .contain .space .row .page-info .base {
+  height: 70px;
+  width: 70px;
+  box-shadow: 0 6px 12px 0 rgba(32, 33, 39, 0.08); }
+
+.content .contain .space .row .page-info .clock {
+  content: url("icon-clock.svg"); }
+
+.content .contain .space .row .page-info .lock {
+  content: url("icon-lock.svg"); }
+
+.content .contain .space .row .page-info .box-title {
+  height: 30px;
+  color: #282B31;
+  font-size: 36px;
+  line-height: 54px;
+  text-align: center; }
+
+.content .contain .space .row .page-info .box-title .bold {
+  font-weight: 800; }
+
+.content .contain .space .row .page-info .box-info {
+  color: #676C75;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center; }
+
+@media (min-width: 768px) {
+  .content .contain .space .row .page-info .box-info {
+    padding: 0 10px;
+    display: inline-block;
+    width: 75%; } }
+
+@media (min-width: 768px) {
+  .content .contain .space .row .left {
+    float: left; } }
+
+@media (min-width: 768px) {
+  .content .contain .space .row .right {
+    float: right; } }
+
+.content .contain .three {
+  background-color: #F8F9FA;
+  width: 100%;
+  height: auto;
+  position: relative; }
+
+@media (min-width: 768px) {
+  .content .contain .three {
+    height: 768px;
+    width: 100%; } }
+
+.content .contain .three .info {
+  height: 100%; }
+
+@media (min-width: 768px) {
+  .content .contain .three .info {
+    display: inline-block;
+    padding: 0 30px;
+    width: 40%;
+    float: left; } }
+
+.content .contain .three .info .box-title {
+  color: #282B31;
+  font-family: "Nunito Sans";
+  font-size: 36px;
+  line-height: 54px;
+  text-align: left;
+  margin: 50px 0 40px; }
+
+.content .contain .three .info .box-title .bold {
+  font-weight: 800; }
+
+.content .contain .three .info .box-info {
+  color: #676C75;
+  font-family: "Nunito Sans";
+  font-size: 16px;
+  line-height: 28px;
+  text-align: left;
+  margin: 10px 0 40px; }
+
+@media (min-width: 768px) {
+  .content .contain .three .info .box-info {
+    display: inline-block; } }
+
+.content .contain .three .img {
+  height: auto; }
+
+@media (min-width: 768px) {
+  .content .contain .three .img {
+    right: -50px;
+    overflow: hidden;
+    height: 600px;
+    width: 60%;
+    display: inline;
+    position: absolute; } }
+
+.content .contain .three .img .win {
+  content: url("Window-2.png");
+  height: 80%; }
+
+@media (max-width: 767px) {
+  .content .contain .three .img .win {
+    width: 95%; } }
