--- a/src/components/FrontPage/PageContent/style.scss
+++ b/src/components/FrontPage/PageContent/style.scss
@@ -14,9 +14,9 @@ $btn-text: #6DABA4;
     text-align: center;
 
     @media (min-width: 768px) {
-        top: 120px;
+        top: 85px;
         height: 525px;
-        position: static;
+        position: relative;
     }
 
     .mobile-space {
@@ -77,7 +77,7 @@ $btn-text: #6DABA4;
         }
 
         .btn-main {
-            margin: 30px;
+            margin: 30px 30px 50px;
             border-radius: 6px;
             background-color: $text;
             color: $btn-text;
@@ -94,12 +94,185 @@ $btn-text: #6DABA4;
         }
 
         .window-1 {
+            //z-index: 100;
             content:url("Window-1.png");
             width: 90%;
 
             @media (min-width: 768px) {
                 max-width: 1100px;
                 content:url("Window-1@2x.png");
+            }
+        }
+
+        .divider {
+            height: 110px;
+        }
+
+        .space {
+            height: auto;
+            width: 100%;
+            margin: auto;
+
+            @media (min-width: 768px) {
+                //position: relative;
+                text-align: center;
+                width: 100%;
+            }
+
+            @media (min-width: 980px) {
+                //width: 980px;
+                max-width: 1300px;
+            }
+
+
+            .row {
+                height: auto;
+                width: auto;
+                color: black;
+                text-align: center;
+
+                .page-info {
+                    margin-bottom: 60px;
+                    padding: 0;
+                    height: 100%;
+
+                    @media (min-width: 768px) {
+                        display: inline-block;
+                        width: 50%;
+                    }
+
+                    .base {
+                        height: 70px;
+                        width: 70px;
+                        box-shadow: 0 6px 12px 0 rgba(32,33,39,0.08);
+                    }
+
+                    .clock {
+                        content:url("icon-clock.svg");
+                        //height: 60px;
+                    }
+
+                    .lock {
+                        content:url("icon-lock.svg");
+                        //height: 60px;
+                    }
+
+                    .box-title {
+                        height: 30px;
+                        color: #282B31;
+                        font-size: 36px;
+                        line-height: 54px;
+                        text-align: center;
+
+                        .bold {
+                            font-weight: 800;
+                        }
+                    }
+
+                    .box-info {
+                        color: #676C75;
+                        font-size: 16px;
+                        line-height: 28px;
+                        text-align: center;
+
+                        @media (min-width: 768px) {
+                            padding: 0 10px;
+                            display: inline-block;
+                            width: 75%;
+                        }
+                    }
+                }
+
+                .left {
+                    @media (min-width: 768px) {
+                        float: left;
+                    }
+                }
+
+                .right {
+                    @media (min-width: 768px) {
+                        float: right;
+                    }
+                }
+            }
+        }
+
+        .three {
+            background-color: $text;
+            width: 100%;
+            height: auto;
+            position: relative;
+
+
+            @media (min-width: 768px) {
+                height: 768px;
+                width: 100%;
+            }
+
+            .info {
+                height: 100%;
+
+                @media (min-width: 768px) {
+                    display: inline-block;
+                    padding: 0 30px;
+                    width: 40%;
+                    float: left;
+                }
+
+                .box-title {
+                    //height: 30px;
+                    color: #282B31;
+                    font-family: "Nunito Sans";
+                    font-size: 36px;
+                    line-height: 54px;
+                    text-align: left;
+                    margin: 50px 0 40px;
+
+                    .bold {
+                        font-weight: 800;
+                    }
+                }
+
+                .box-info {
+                    color: #676C75;
+                    font-family: "Nunito Sans";
+                    font-size: 16px;
+                    line-height: 28px;
+                    text-align: left;
+                    margin: 10px 0 40px;
+
+                    @media (min-width: 768px) {
+                        display: inline-block;
+                    }
+                }
+            }
+
+            .img {
+                height: auto;
+                //width: 50%;
+
+                @media (min-width: 768px) {
+                    right: -50px;
+                    overflow: hidden;
+                    height: 600px;
+                    width: 60%;
+                    display: inline;
+                    position: absolute;
+                }
+
+                .win {
+                    content:url("Window-2.png");
+                    //width: 80%;
+                    height: 80%;
+
+                    @media (max-width: 767px) {
+                        width: 95%;
+
+                        //display: inline;
+                        //position: absolute;
+                    }
+                }
+
             }
         }
     }
