--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
   top: 0;
   bottom: 0;
   height: 100%;
-  font-family: Nunito Sans, sans-serif; }
+  font-family: Nunito Sans, sans-serif;
+  font-weight: 300; }
