--- a/src/components/FrontPage/PageContent/style.css
+++ b/src/components/FrontPage/PageContent/style.css
@@ -232,3 +232,53 @@
 @media (max-width: 767px) {
   .content .contain .three .img .win {
     width: 95%; } }
+
+.content .contain .sign-up {
+  height: auto; }
+
+@media (min-width: 768px) {
+  .content .contain .sign-up {
+    height: 440px; } }
+
+.content .contain .sign-up .header {
+  margin: auto;
+  color: #282B31;
+  letter-spacing: 1px;
+  line-height: 50px;
+  text-align: center;
+  margin-top: 120px;
+  font-size: 36px; }
+
+@media (min-width: 768px) {
+  .content .contain .sign-up .header {
+    line-height: 54px;
+    width: 632px;
+    font-size: 35px;
+    height: 50px;
+    margin-bottom: 60px; } }
+
+.content .contain .sign-up .header .sign {
+  font-weight: 800; }
+
+.content .contain .sign-up .input {
+  margin: 10px;
+  height: 50px;
+  width: 243px;
+  border: 1px solid #E7E8EA;
+  border-radius: 6px;
+  background-color: #F8F9FA; }
+
+@media (min-width: 768px) {
+  .content .contain .sign-up .input {
+    margin: 0 10px; } }
+
+.content .contain .sign-up .terms {
+  margin: 32px auto;
+  height: 15px;
+  color: #B9BDC3;
+  font-family: "Nunito Sans";
+  font-size: 11px;
+  line-height: 15px; }
+
+.content .contain .sign-up .terms .link {
+  display: inline; }
