--- a/src/components/FrontPage/PageContent/style.css
+++ b/src/components/FrontPage/PageContent/style.css
@@ -6,279 +6,171 @@
   position: relative;
   padding: 0;
   text-align: center; }
-
-@media (min-width: 768px) {
-  .content {
-    top: 85px;
-    height: 525px;
-    position: relative; } }
-
-.content .mobile-space {
-  width: 100%;
-  height: auto; }
-
-@media (min-width: 768px) {
+  @media (min-width: 768px) {
+    .content {
+      top: 85px;
+      height: 525px;
+      position: relative; } }
   .content .mobile-space {
-    display: none; } }
-
-.content .contain {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 16px; }
-
-@media (min-width: 768px) {
+    width: 100%;
+    height: auto; }
+    @media (min-width: 768px) {
+      .content .mobile-space {
+        display: none; } }
   .content .contain {
-    margin: auto;
-    text-align: center;
-    width: 768px; } }
-
-@media (min-width: 980px) {
-  .content .contain {
-    width: 980px; } }
-
-.content .contain .app-icon {
-  content: url("AppIcon.png");
-  width: 110px; }
-
-@media (min-width: 768px) {
-  .content .contain .app-icon {
-    width: 90px;
-    content: url("AppIcon@2x.png"); } }
-
-.content .contain .para {
-  letter-spacing: 1px;
-  width: auto;
-  font-weight: 800;
-  letter-spacing: 1px;
-  line-height: 36px;
-  font-size: 28px;
-  text-align: center; }
-
-@media (min-width: 768px) {
-  .content .contain .para {
-    width: 555px;
-    font-size: 36px;
-    line-height: 54px;
-    margin: auto; } }
-
-.content .contain .para .sed {
-  font-weight: 200; }
-
-.content .contain .btn-main {
-  margin: 30px 30px 50px;
-  border-radius: 6px;
-  background-color: #F8F9FA;
-  color: #6DABA4;
-  width: 100px;
-  border: none;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 17px;
-  letter-spacing: 1px;
-  font-weight: 600;
-  line-height: 23px; }
-
-.content .contain .window-1 {
-  content: url("Window-1.png");
-  width: 90%; }
-
-@media (min-width: 768px) {
-  .content .contain .window-1 {
-    max-width: 1100px;
-    content: url("Window-1@2x.png"); } }
-
-.content .contain .divider {
-  height: 110px; }
-
-.content .contain .space {
-  height: auto;
-  width: 100%;
-  margin: auto; }
-
-@media (min-width: 768px) {
-  .content .contain .space {
-    text-align: center;
-    width: 100%; } }
-
-@media (min-width: 980px) {
-  .content .contain .space {
-    max-width: 1300px; } }
-
-.content .contain .space .row {
-  height: auto;
-  width: auto;
-  color: black;
-  text-align: center; }
-
-.content .contain .space .row .page-info {
-  margin-bottom: 60px;
-  padding: 0;
-  height: 100%; }
-
-@media (min-width: 768px) {
-  .content .contain .space .row .page-info {
-    display: inline-block;
-    width: 50%; } }
-
-.content .contain .space .row .page-info .base {
-  height: 70px;
-  width: 70px;
-  box-shadow: 0 6px 12px 0 rgba(32, 33, 39, 0.08); }
-
-.content .contain .space .row .page-info .clock {
-  content: url("icon-clock.svg"); }
-
-.content .contain .space .row .page-info .lock {
-  content: url("icon-lock.svg"); }
-
-.content .contain .space .row .page-info .box-title {
-  height: 30px;
-  color: #282B31;
-  font-size: 36px;
-  line-height: 54px;
-  text-align: center; }
-
-.content .contain .space .row .page-info .box-title .bold {
-  font-weight: 800; }
-
-.content .contain .space .row .page-info .box-info {
-  color: #676C75;
-  font-size: 16px;
-  line-height: 28px;
-  text-align: center; }
-
-@media (min-width: 768px) {
-  .content .contain .space .row .page-info .box-info {
-    padding: 0 10px;
-    display: inline-block;
-    width: 75%; } }
-
-@media (min-width: 768px) {
-  .content .contain .space .row .left {
-    float: left; } }
-
-@media (min-width: 768px) {
-  .content .contain .space .row .right {
-    float: right; } }
-
-.content .contain .three {
-  background-color: #F8F9FA;
-  width: 100%;
-  height: auto;
-  position: relative; }
-
-@media (min-width: 768px) {
-  .content .contain .three {
-    height: 768px;
-    width: 100%; } }
-
-.content .contain .three .top {
-  top: 100px; }
-
-.content .contain .three .info {
-  height: 100%; }
-
-@media (min-width: 768px) {
-  .content .contain .three .info {
-    display: inline-block;
-    padding: 0 30px;
-    width: 40%;
-    float: left;
-    position: relative; } }
-
-.content .contain .three .info .box-title {
-  color: #282B31;
-  font-family: "Nunito Sans";
-  font-size: 36px;
-  line-height: 54px;
-  text-align: left;
-  margin: 50px 0 40px; }
-
-.content .contain .three .info .box-title .bold {
-  font-weight: 800; }
-
-.content .contain .three .info .box-info {
-  color: #676C75;
-  font-family: "Nunito Sans";
-  font-size: 16px;
-  line-height: 28px;
-  text-align: left;
-  margin: 10px 0 40px; }
-
-@media (min-width: 768px) {
-  .content .contain .three .info .box-info {
-    display: inline-block; } }
-
-.content .contain .three .img {
-  height: auto; }
-
-@media (min-width: 768px) {
-  .content .contain .three .img {
-    right: 5px;
-    overflow: hidden;
-    height: 600px;
-    width: 50%;
-    display: inline;
-    position: absolute; } }
-
-.content .contain .three .img .win {
-  content: url("Window-2.png");
-  height: 80%; }
-
-@media (max-width: 767px) {
-  .content .contain .three .img .win {
-    width: 95%; } }
-
-.content .contain .sign-up {
-  height: auto; }
-
-@media (min-width: 768px) {
-  .content .contain .sign-up {
-    height: 440px; } }
-
-.content .contain .sign-up .header {
-  margin: auto;
-  color: #282B31;
-  letter-spacing: 1px;
-  line-height: 50px;
-  text-align: center;
-  margin-top: 120px;
-  font-size: 36px; }
-
-@media (min-width: 768px) {
-  .content .contain .sign-up .header {
-    line-height: 54px;
-    width: 632px;
-    font-size: 35px;
-    height: 50px;
-    margin-bottom: 60px; } }
-
-.content .contain .sign-up .header .sign {
-  font-weight: 800; }
-
-.content .contain .sign-up .input {
-  margin: 10px;
-  height: 50px;
-  width: 243px;
-  border: 1px solid #E7E8EA;
-  border-radius: 6px;
-  background-color: #F8F9FA; }
-
-@media (min-width: 768px) {
-  .content .contain .sign-up .input {
-    margin: 0 10px; } }
-
-.content .contain .sign-up .terms {
-  margin: 32px auto;
-  height: 15px;
-  color: #B9BDC3;
-  font-family: "Nunito Sans";
-  font-size: 11px;
-  line-height: 15px; }
-
-.content .contain .sign-up .terms .link {
-  display: inline; }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 16px; }
+    @media (min-width: 768px) {
+      .content .contain {
+        margin: auto;
+        text-align: center;
+        width: 768px; } }
+    @media (min-width: 980px) {
+      .content .contain {
+        width: 980px; } }
+    .content .contain .app-icon {
+      content: url("AppIcon.png");
+      width: 110px; }
+      @media (min-width: 768px) {
+        .content .contain .app-icon {
+          width: 90px;
+          content: url("AppIcon@2x.png"); } }
+    .content .contain .para {
+      letter-spacing: 1px;
+      width: auto;
+      font-weight: 800;
+      letter-spacing: 1px;
+      line-height: 36px;
+      font-size: 28px;
+      text-align: center; }
+      @media (min-width: 768px) {
+        .content .contain .para {
+          width: 555px;
+          font-size: 36px;
+          line-height: 54px;
+          margin: auto; } }
+      .content .contain .para .sed {
+        font-weight: 200; }
+    .content .contain .btn-main {
+      margin: 30px 30px 50px;
+      border-radius: 6px;
+      background-color: #F8F9FA;
+      color: #6DABA4;
+      width: 100px;
+      border: none;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 17px;
+      letter-spacing: 1px;
+      font-weight: 600;
+      line-height: 23px; }
+    .content .contain .window-1 {
+      content: url("Window-1.png");
+      width: 90%; }
+      @media (min-width: 768px) {
+        .content .contain .window-1 {
+          max-width: 1100px;
+          content: url("Window-1@2x.png"); } }
+    .content .contain .divider {
+      height: 110px; }
+    .content .contain .three {
+      background-color: #F8F9FA;
+      width: 100%;
+      height: auto;
+      position: relative; }
+      @media (min-width: 768px) {
+        .content .contain .three {
+          height: 768px;
+          width: 100%; } }
+      .content .contain .three .top {
+        top: 100px; }
+      .content .contain .three .info {
+        height: 100%; }
+        @media (min-width: 768px) {
+          .content .contain .three .info {
+            display: inline-block;
+            padding: 0 30px;
+            width: 40%;
+            float: left;
+            position: relative; } }
+        .content .contain .three .info .box-title {
+          color: #282B31;
+          font-family: "Nunito Sans";
+          font-size: 36px;
+          line-height: 54px;
+          text-align: left;
+          margin: 50px 0 40px; }
+          .content .contain .three .info .box-title .bold {
+            font-weight: 800; }
+        .content .contain .three .info .box-info {
+          color: #676C75;
+          font-family: "Nunito Sans";
+          font-size: 16px;
+          line-height: 28px;
+          text-align: left;
+          margin: 10px 0 40px; }
+          @media (min-width: 768px) {
+            .content .contain .three .info .box-info {
+              display: inline-block; } }
+      .content .contain .three .img {
+        height: auto; }
+        @media (min-width: 768px) {
+          .content .contain .three .img {
+            right: 5px;
+            overflow: hidden;
+            height: 600px;
+            width: 50%;
+            display: inline;
+            position: absolute; } }
+        .content .contain .three .img .win {
+          content: url("TwoLine/Window-2.png");
+          height: 80%; }
+          @media (max-width: 767px) {
+            .content .contain .three .img .win {
+              width: 95%; } }
+    .content .contain .sign-up {
+      height: auto; }
+      @media (min-width: 768px) {
+        .content .contain .sign-up {
+          height: 440px; } }
+      .content .contain .sign-up .header {
+        margin: auto;
+        color: #282B31;
+        letter-spacing: 1px;
+        line-height: 50px;
+        text-align: center;
+        margin-top: 120px;
+        font-size: 36px; }
+        @media (min-width: 768px) {
+          .content .contain .sign-up .header {
+            line-height: 54px;
+            width: 632px;
+            font-size: 35px;
+            height: 50px;
+            margin-bottom: 60px; } }
+        .content .contain .sign-up .header .sign {
+          font-weight: 800; }
+      .content .contain .sign-up .input {
+        margin: 10px;
+        height: 50px;
+        width: 243px;
+        border: 1px solid #E7E8EA;
+        border-radius: 6px;
+        background-color: #F8F9FA; }
+        @media (min-width: 768px) {
+          .content .contain .sign-up .input {
+            margin: 0 10px; } }
+      .content .contain .sign-up .terms {
+        margin: 32px auto;
+        height: 15px;
+        color: #B9BDC3;
+        font-size: 11px;
+        line-height: 15px; }
+        .content .contain .sign-up .terms .link {
+          display: inline;
+          text-decoration-color: #B9BDC3; }
