--- a/src/components/FrontPage/PageContent/style.css
+++ b/src/components/FrontPage/PageContent/style.css
@@ -18,7 +18,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%; }
+  width: 100%;
+  top: 20px;
+  position: relative; }
 
 @media (min-width: 768px) {
   .content .contain {
@@ -45,7 +47,8 @@
   letter-spacing: 1px;
   line-height: 36px;
   font-size: 28px;
-  text-align: center; }
+  text-align: center;
+  margin: auto 16px; }
 
 @media (min-width: 768px) {
   .content .contain .para {
@@ -84,121 +87,3 @@
 
 .content .contain .divider {
   height: 110px; }
-
-.content .contain .three {
-  background-color: #F8F9FA;
-  width: 100%;
-  height: auto;
-  position: relative; }
-
-@media (min-width: 768px) {
-  .content .contain .three {
-    height: 768px;
-    width: 100%; } }
-
-.content .contain .three .top {
-  top: 100px; }
-
-.content .contain .three .info {
-  height: 100%; }
-
-@media (min-width: 768px) {
-  .content .contain .three .info {
-    display: inline-block;
-    padding: 0 30px;
-    width: 40%;
-    float: left;
-    position: relative; } }
-
-.content .contain .three .info .box-title {
-  color: #282B31;
-  font-family: "Nunito Sans";
-  font-size: 36px;
-  line-height: 54px;
-  text-align: left;
-  margin: 50px 0 40px; }
-
-.content .contain .three .info .box-title .bold {
-  font-weight: 800; }
-
-.content .contain .three .info .box-info {
-  color: #676C75;
-  font-family: "Nunito Sans";
-  font-size: 16px;
-  line-height: 28px;
-  text-align: left;
-  margin: 10px 0 40px; }
-
-@media (min-width: 768px) {
-  .content .contain .three .info .box-info {
-    display: inline-block; } }
-
-.content .contain .three .img {
-  height: auto; }
-
-@media (min-width: 768px) {
-  .content .contain .three .img {
-    right: 5px;
-    overflow: hidden;
-    height: 600px;
-    width: 50%;
-    display: inline;
-    position: absolute; } }
-
-.content .contain .three .img .win {
-  content: url("TwoLine/Window-2.png");
-  height: 80%; }
-
-@media (max-width: 767px) {
-  .content .contain .three .img .win {
-    width: 95%; } }
-
-.content .contain .sign-up {
-  height: auto; }
-
-@media (min-width: 768px) {
-  .content .contain .sign-up {
-    height: 440px; } }
-
-.content .contain .sign-up .header {
-  margin: auto;
-  color: #282B31;
-  letter-spacing: 1px;
-  line-height: 50px;
-  text-align: center;
-  margin-top: 120px;
-  font-size: 36px; }
-
-@media (min-width: 768px) {
-  .content .contain .sign-up .header {
-    line-height: 54px;
-    width: 632px;
-    font-size: 35px;
-    height: 50px;
-    margin-bottom: 60px; } }
-
-.content .contain .sign-up .header .sign {
-  font-weight: 800; }
-
-.content .contain .sign-up .input {
-  margin: 10px;
-  height: 50px;
-  width: 243px;
-  border: 1px solid #E7E8EA;
-  border-radius: 6px;
-  background-color: #F8F9FA; }
-
-@media (min-width: 768px) {
-  .content .contain .sign-up .input {
-    margin: 0 10px; } }
-
-.content .contain .sign-up .terms {
-  margin: 32px auto;
-  height: 15px;
-  color: #B9BDC3;
-  font-size: 11px;
-  line-height: 15px; }
-
-.content .contain .sign-up .terms .link {
-  display: inline;
-  text-decoration-color: #B9BDC3; }
