--- a/src/components/FrontPage/PageContent/SideBoxes/style.scss
+++ b/src/components/FrontPage/PageContent/SideBoxes/style.scss
@@ -60,6 +60,7 @@
                 font-size: 16px;
                 line-height: 28px;
                 text-align: center;
+                margin: auto 16px;
 
                 @media (min-width: 768px) {
                     padding: 0 10px;
