--- a/src/components/FrontPage/PageContent/SignUp/style.css
+++ b/src/components/FrontPage/PageContent/SignUp/style.css
@@ -1,41 +1,48 @@
 .sign-up {
   height: auto; }
-  @media (min-width: 768px) {
-    .sign-up {
-      height: 440px; } }
+
+@media (min-width: 768px) {
+  .sign-up {
+    height: 440px; } }
+
+.sign-up .header {
+  color: #282B31;
+  letter-spacing: 1px;
+  line-height: 50px;
+  text-align: center;
+  margin: 80px 16px 60px;
+  font-size: 36px; }
+
+@media (min-width: 768px) {
   .sign-up .header {
-    margin: auto;
-    color: #282B31;
-    letter-spacing: 1px;
-    line-height: 50px;
-    text-align: center;
-    margin-top: 120px;
-    font-size: 36px; }
-    @media (min-width: 768px) {
-      .sign-up .header {
-        line-height: 54px;
-        width: 632px;
-        font-size: 35px;
-        height: 50px;
-        margin-bottom: 60px; } }
-    .sign-up .header .sign {
-      font-weight: 800; }
-  .sign-up .input {
-    margin: 10px;
+    line-height: 54px;
+    width: 632px;
+    font-size: 35px;
     height: 50px;
-    width: 243px;
-    border: 1px solid #E7E8EA;
-    border-radius: 6px;
-    background-color: #F8F9FA; }
-    @media (min-width: 768px) {
-      .sign-up .input {
-        margin: 0 10px; } }
-  .sign-up .terms {
-    margin: 32px auto;
-    height: 15px;
-    color: #B9BDC3;
-    font-size: 11px;
-    line-height: 15px; }
-    .sign-up .terms .link {
-      display: inline;
-      text-decoration-color: #B9BDC3; }
+    margin-bottom: 60px; } }
+
+.sign-up .header .sign {
+  font-weight: 800; }
+
+.sign-up .input {
+  margin: 10px;
+  height: 50px;
+  width: 243px;
+  border: 1px solid #E7E8EA;
+  border-radius: 6px;
+  background-color: #F8F9FA; }
+
+@media (min-width: 768px) {
+  .sign-up .input {
+    margin: 0 10px; } }
+
+.sign-up .terms {
+  margin: 32px auto 65px;
+  height: 15px;
+  color: #B9BDC3;
+  font-size: 11px;
+  line-height: 15px; }
+
+.sign-up .terms .link {
+  display: inline;
+  text-decoration-color: #B9BDC3; }
