Navbar position fix

--- a/src/components/FrontPage/PageContent/SignUp/style.scss
+++ b/src/components/FrontPage/PageContent/SignUp/style.scss
@@ -17,7 +17,7 @@ $btn-text: #6DABA4;
         letter-spacing: 1px;
         line-height: 50px;
         text-align: center;
-        margin: 80px 16px 60px;
+        margin: 80px auto 60px auto;
         font-size: 36px;
 
         @media (min-width: 768px) {
