--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -13,6 +13,7 @@ $nav-text: #7FB8B3;
     z-index: 100;
 
     @media (min-width: 768px) {
+        position: absolute;
         text-align: center;
         height: 85px;
     }
