Footer work started with lists, onto subscribe

--- a/src/components/FrontPage/PageContent/Footer/style.css
+++ b/src/components/FrontPage/PageContent/Footer/style.css
@@ -1,5 +1,48 @@
 .footer {
-  height: 330px;
+  height: auto;
   bottom: 0;
   width: 100%;
-  background-color: #7FB8B3; }
+  background-color: #6DABA4;
+  text-align: left; }
+
+@media (min-width: 768px) {
+  .footer {
+    height: 330px; } }
+
+.footer .container {
+  margin: auto;
+  width: 83%;
+  height: 75%;
+  top: 56px; }
+
+@media (min-width: 768px) {
+  .footer .container {
+    position: relative;
+    top: 20px; } }
+
+.footer .container .footer-list {
+  list-style: none;
+  text-align: center;
+  padding: 0; }
+
+@media (min-width: 768px) {
+  .footer .container .footer-list {
+    text-align: left;
+    display: inline-grid;
+    width: 18%;
+    top: 0;
+    position: relative; } }
+
+.footer .container .footer-list .list-title {
+  margin: 32px 11px 11px;
+  font-size: 14px;
+  font-weight: 600;
+  height: 20px;
+  letter-spacing: 1px; }
+
+.footer .container .footer-list .list-item {
+  margin: 11px;
+  font-size: 13px; }
+
+.footer .line {
+  width: 85%; }
