--- a/src/components/FrontPage/PageContent/Footer/style.css
+++ b/src/components/FrontPage/PageContent/Footer/style.css
@@ -44,5 +44,23 @@
   margin: 11px;
   font-size: 13px; }
 
+.footer .subscribe {
+  width: 26% !important;
+  height: 90%;
+  display: inline; }
+
+.footer .subscribe .email {
+  margin-top: 40px;
+  height: 50px;
+  width: 250px;
+  border: 1px solid #E7E8EA;
+  border-radius: 6px;
+  background-color: #F8F9FA; }
+
+@media (min-width: 768px) {
+  .footer .subscribe .email {
+    margin: -10px 0 20px 11px;
+    margin-left: 11px; } }
+
 .footer .line {
   width: 85%; }
