--- a/src/components/FrontPage/PageContent/SideBoxes/style.scss
+++ b/src/components/FrontPage/PageContent/SideBoxes/style.scss
@@ -36,11 +36,11 @@
             }
 
             .clock {
-                content:url("icon-clock.svg");
+                background: url("icon-clock.svg");
             }
 
             .lock {
-                content:url("icon-lock.svg");
+                background-image: url("icon-lock.svg");
             }
 
             .box-title {
