Styling for email subcription and sign up input fields

--- a/src/components/FrontPage/PageContent/SideBoxes/style.css
+++ b/src/components/FrontPage/PageContent/SideBoxes/style.css
@@ -34,7 +34,7 @@
   box-shadow: 0 6px 12px 0 rgba(32, 33, 39, 0.08); }
 
 .side-boxes .row .page-info .clock {
-  background: url("icon-clock.svg"); }
+  background-image: url("icon-clock.svg"); }
 
 .side-boxes .row .page-info .lock {
   background-image: url("icon-lock.svg"); }
