--- a/src/components/FrontPage/PageContent/SignUp/style.css
+++ b/src/components/FrontPage/PageContent/SignUp/style.css
@@ -30,11 +30,34 @@
   width: 243px;
   border: 1px solid #E7E8EA;
   border-radius: 6px;
-  background-color: #F8F9FA; }
+  background-color: #F8F9FA;
+  font-weight: 200; }
+
+.sign-up .input::-webkit-input-placeholder {
+  font-family: "Nunito Sans";
+  color: #B9BDC3;
+  font-size: 17px;
+  font-weight: 200; }
+
+.sign-up .input[type="text"] {
+  font-family: "Nunito Sans";
+  font-size: 17px;
+  padding-left: 15px;
+  box-sizing: border-box; }
 
 @media (min-width: 768px) {
   .sign-up .input {
     margin: 0 10px; } }
+
+.sign-up .btn {
+  background-color: #6DABA4;
+  color: #FFFFFF;
+  font-family: "Nunito Sans";
+  font-size: 17px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  line-height: 23px;
+  text-align: center; }
 
 .sign-up .terms {
   margin: 32px auto 65px;
