--- a/src/components/FrontPage/PageContent/Footer/style.css
+++ b/src/components/FrontPage/PageContent/Footer/style.css
@@ -61,6 +61,18 @@
   border-radius: 6px;
   background-color: #F8F9FA; }
 
+.footer .subscribe .email::-webkit-input-placeholder {
+  font-family: "Nunito Sans", FontAwesome;
+  color: #B9BDC3;
+  font-size: 17px;
+  font-weight: 200; }
+
+.footer .subscribe .email[type="text"] {
+  font-family: "Nunito Sans";
+  font-size: 15px;
+  padding-left: 15px;
+  box-sizing: border-box; }
+
 @media (min-width: 768px) {
   .footer .subscribe .email {
     width: 120%;
