--- a/src/components/FrontPage/PageContent/Footer/style.scss
+++ b/src/components/FrontPage/PageContent/Footer/style.scss
@@ -73,6 +73,20 @@ $btn-text: #6DABA4;
             border-radius: 6px;
             background-color: #F8F9FA;
 
+            &::-webkit-input-placeholder{
+                font-family: "Nunito Sans", FontAwesome;
+                color: #B9BDC3;
+                font-size: 17px;
+                font-weight: 200;
+                //padding-left: 15px;
+            }
+
+            &[type="text"] {
+                font-family: "Nunito Sans";
+                font-size: 15px;
+                padding-left: 15px;
+                box-sizing: border-box;
+            }
 
             @media (min-width: 768px) {
                 width: 120%;
