--- a/src/components/FrontPage/PageContent/SideBoxes/style.scss
+++ b/src/components/FrontPage/PageContent/SideBoxes/style.scss
@@ -36,7 +36,7 @@
             }
 
             .clock {
-                background: url("icon-clock.svg");
+                background-image: url("icon-clock.svg");
             }
 
             .lock {
