Terms link styling

--- a/src/components/FrontPage/PageContent/SignUp/style.scss
+++ b/src/components/FrontPage/PageContent/SignUp/style.scss
@@ -57,7 +57,7 @@ $btn-text: #6DABA4;
         }
 
         @media (min-width: 768px) {
-            margin: 0 10px;
+            margin: 10px;
         }
     }
 
@@ -81,7 +81,7 @@ $btn-text: #6DABA4;
 
         .link {
             display: inline;
-            text-decoration-color: #B9BDC3;
+            color: #B9BDC3;
         }
     }
 }
