--- a/src/components/FrontPage/PageContent/SignUp/style.css
+++ b/src/components/FrontPage/PageContent/SignUp/style.css
@@ -47,7 +47,7 @@
 
 @media (min-width: 768px) {
   .sign-up .input {
-    margin: 0 10px; } }
+    margin: 10px; } }
 
 .sign-up .btn {
   background-color: #6DABA4;
@@ -68,4 +68,4 @@
 
 .sign-up .terms .link {
   display: inline;
-  text-decoration-color: #B9BDC3; }
+  color: #B9BDC3; }
