--- a/src/components/FrontPage/PageContent/SignUp/style.css
+++ b/src/components/FrontPage/PageContent/SignUp/style.css
@@ -10,7 +10,7 @@
   letter-spacing: 1px;
   line-height: 50px;
   text-align: center;
-  margin: 80px auto 60px auto;
+  margin: 80px 16px 60px;
   font-size: 36px; }
 
 @media (min-width: 768px) {
