Social icons added to footer

--- a/src/components/FrontPage/PageContent/Footer/style.scss
+++ b/src/components/FrontPage/PageContent/Footer/style.scss
@@ -97,6 +97,34 @@ $btn-text: #6DABA4;
                 margin-top: 20px;
             }
         }
+
+        .footer-icons {
+            margin: 32px 11px;
+
+            @media (min-width: 768px) {
+                margin: 8px 11px 0;
+            }
+
+            .social {
+                text-align: center;
+                vertical-align: bottom;
+                height: 28px;
+                width: 38px;
+                padding-top: 10px;
+                border: 1px solid rgba(255,255,255,0.3);
+                background-color: rgba(248,249,250,0);
+                display: inline-block;
+            }
+
+            .left-social {
+                border-radius: 6px 0 0 6px;
+            }
+
+            .right-social {
+                border-radius: 0 6px 6px 0;
+            }
+        }
+
     }
 
     .line {
