--- a/src/components/FrontPage/PageContent/SignUp/style.css
+++ b/src/components/FrontPage/PageContent/SignUp/style.css
@@ -19,7 +19,7 @@
     width: 632px;
     font-size: 35px;
     height: 50px;
-    margin-bottom: 60px; } }
+    margin: 80px auto 60px; } }
 
 .sign-up .header .sign {
   font-weight: 800; }
