--- a/src/components/FrontPage/PageContent/SignUp/style.scss
+++ b/src/components/FrontPage/PageContent/SignUp/style.scss
@@ -25,7 +25,7 @@ $btn-text: #6DABA4;
             width: 632px;
             font-size: 35px;
             height: 50px;
-            margin-bottom: 60px;
+            margin: 80px auto 60px;
         }
 
         .sign {
